<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.proj.MainActivity" >
    <item
		android:id="@+id/action_openGallary"
		android:orderInCategory="1"
		android:showAsAction="never"
		android:title="@string/action_OpenGallary"/>
	<item
		android:id="@+id/list_low_past_filter"
		android:enabled="true"
		android:orderInCategory="2"
		android:showAsAction="ifRoom"
		android:title="@string/low_pass_filter"
		android:titleCondensed="@string/low_pass_filter"
		android:visible="true">
		<menu>
			<item
				android:id="@+id/average_filter"
				android:title="@string/average_filter"
				android:checkable="true"/>
			<item
				android:id="@+id/gaussian_filter"
				android:title="@string/gaussian_filter"
				android:checkable="true"/>
			<item
				android:id="@+id/median_filter"
				android:title="@string/median_filter"
				android:checkable="true"/>
		</menu>				
	</item>
	<item
		android:id="@+id/high_pass_filter"
		android:enabled="true"
		android:orderInCategory="3"
		android:showAsAction="ifRoom"
		android:title="@string/list_high_pass_filter"
		android:titleCondensed="@string/high_pass_filter"
		android:visible="true">
		<menu>
			<item
				android:id="@+id/mean_removal_filter"
				android:title="@string/mean_removal_filter"
				android:checkable="true"/>
			<item
				android:id="@+id/hp1_filter"
				android:title="@string/hp1_filter"
				android:checkable="true"/>
		</menu>				
	</item>
	<item
		android:id="@+id/band_pass_filter"
		android:enabled="true"
		android:orderInCategory="4"
		android:showAsAction="ifRoom"
		android:title="@string/list_band_pass_filter"
		android:titleCondensed="@string/band_pass_filter"
		android:visible="true">
		<menu>	
		    <item
				android:id="@+id/canny_filter"
				android:title="@string/canny_filter"
				android:checkable="true"/>
			<item
				android:id="@+id/laplace_filter"
				android:title="@string/laplace_filter"
				android:checkable="true"/>
			<item
				android:id="@+id/sobel_filter"
				android:title="@string/sobel_filter"
				android:checkable="true"/>
		</menu>			
	</item>
	<item
		android:id="@+id/dft"
		android:enabled="true"
		android:orderInCategory="5"
		android:showAsAction="ifRoom"
		android:title="@string/dft"
		android:titleCondensed="@string/dft"
		android:visible="true">
		<menu>	
		    <item
				android:id="@+id/magnitude"
				android:title="@string/magnitude"/>
			<item
				android:id="@+id/phase"
				android:title="@string/phase"/>

		</menu>
	</item>
	<item
		android:id="@+id/histogram"
		android:enabled="true"
		android:orderInCategory="7"
		android:showAsAction="ifRoom"
		android:title="@string/histogram"
		android:titleCondensed="@string/histogram"
		android:visible="true"
		android:checkable="true">
	</item>
	<item
		android:id="@+id/gray_filter"
		android:enabled="true"
		android:orderInCategory="8"
		android:showAsAction="ifRoom"
		android:title="@string/gray_filter"
		android:titleCondensed="@string/gray_filter"
		android:checkable="true">
	</item>
		<item
		android:id="@+id/original"
		android:enabled="true"
		android:orderInCategory="9"
		android:showAsAction="ifRoom"
		android:title="@string/original"
		android:titleCondensed="@string/original"
		android:visible="true"
		android:checkable="true"
		android:checked="true">
	</item>
		<item
		android:id="@+id/clearFilters"
		android:enabled="true"
		android:orderInCategory="9"
		android:showAsAction="ifRoom"
		android:title="@string/clearFilters"
		android:titleCondensed="@string/clearFilters"
		android:visible="true">
	</item>
		<item
		android:id="@+id/discreet_activity"
		android:enabled="true"
		android:orderInCategory="10"
		android:showAsAction="ifRoom"
		android:title="@string/discreet_activity"
		android:titleCondensed="@string/discreet_activity"
		android:visible="true">
	</item>
</menu>
